--- a/templates/view_signup.html
+++ b/templates/view_signup.html
@@ -1,87 +1,3 @@
-
-    <form id="frm_user_signup" class="border-1 border-zinc-100 w-full max-w-sm flex flex-col gap-6 mx-auto p-8 shadow-lg rounded-md">
-        <div>
-            <h1 class="text-3xl font-bold pb-3">Sign up</h1>
-            <p class=" font-light text-gray-700">Register an account to order your next meal</p>
-        </div>
-        <div>
-            <label for="user_role" class="text-sm text-gray-600 mb-1">Role</label>
-            <select
-                name="user_role"
-                id="user_role"
-                mix-check="{{ x.USER_ROLES }}"
-                class="block text-gray-600">
-                <option disabled selected value>-- Select an option --</option>
-                <option value="customer">Customer</option>
-                <option value="partner">Partner</option>
-            </select>
-        </div>
-
-        <div class="flex flex-col">
-            <label for="user_name" class="text-sm text-gray-600 mb-1">First name</label>
-            <input
-                name="user_name"
-                type="text"
-                mix-check="{{ x.NAME_REGEX }}"/>
-        </div>
-
-        <div class="flex flex-col">
-            <label for="user_last_name" class="text-sm text-gray-600 mb-1">Last name</label>
-            <input
-                name="user_last_name"
-                type="text"
-                mix-check="{{ x.NAME_REGEX }}"/>
-        </div>
-
-        <div class="flex flex-col">
-            <label for="user_street" class="text-sm text-gray-600 mb-1">Street</label>
-            <input
-                name="user_street"
-                type="text"
-                mix-check="{{ x.ADDRESS_REGEX }}"/>
-        </div>
-
-        <div class="flex gap-3">
-            <div class="flex flex-col w-2/3">
-                <label for="user_city" class="text-sm text-gray-600 mb-1">City</label>
-                <input
-                    name="user_city"
-                    type="text"
-                    mix-check="{{ x.ADDRESS_REGEX }}"/>
-            </div>
-            <div class="flex flex-col w-1/3">
-                <label for="user_postalcode" class="text-sm text-gray-600 mb-1">Postalcode</label>
-                <input
-                    name="user_postalcode"
-                    type="text"
-                    mix-check="{{ x.POSTALCODE_REGEX }}"/>
-            </div>
-    
-        </div>
-
-        <div class="flex flex-col">
-            <label for="user_email" class="text-sm text-gray-600 mb-1">Email</label>
-            <input
-                name="user_email"
-                type="text"
-                mix-check="{{ x.EMAIL_REGEX }}"/>
-        </div>
-
-        <div class="flex flex-col">
-            <label for="user_password" class="flex items-center text-sm text-gray-600 mb-1">
-                <span>Password</span>
-                <span class="ml-auto text-gray-400 text-xs">{{ x.PASSWORD_MIN }} to {{ x.PASSWORD_MAX }} chars</span>
-            </label>
-            <input
-                name="user_password"
-                type="text"
-                mix-check="{{ x.PASSWORD_REGEX }}" />
-        </div>
-
-        <button
-            mix-post="/users"
-            mix-data="#frm_user_signup"
-            class="btn-primary rounded-md">
-            Signup
-        </button>
-    </form>
+{% include "_top.html" %}
+{% include "__frm_signup.html" %}
+{% include "_bottom.html" %}
