--- a/templates/view_all_items_admin.html
+++ b/templates/view_all_items_admin.html
@@ -64,7 +64,7 @@
                         🗑️
                     </button>
                     {% else %}
-                    <div class="flex items-center">{{ item.item_deleted_at }}</div>
+                    <div class="flex items-center">{{ item.item_deleted_at | format_epoch }}</div>
                     {% endif %}
                 </td>
             </tr>
