--- a/templates/view_edit_item.html
+++ b/templates/view_edit_item.html
@@ -65,7 +65,7 @@
               class="btn-primary rounded-md">
               Save
           </button>
-          <button class="open-delete-modal-btn text-red-500 font-semibold mt-4 border-b-2 border-transparent leading-none w-fit mx-auto hover:border-red-500 transition-colors duration-200 ease-in-out">
+          <button type="button" class="open-delete-modal-btn text-red-500 font-semibold mt-4 border-b-2 border-transparent leading-none w-fit mx-auto hover:border-red-500 transition-colors duration-200 ease-in-out">
             Delete
         </button>
         </div>
