--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -11,20 +11,20 @@
                 <div class="h-[35rem] overflow-y-auto">
                     <ul class="space-y-4 p-3">
                         {% for addr in address %}
-                        <a href="/customer/restaurant/{{ addr.restaurant_pk }}" class="w-full block group relative">
+                        <a href="/customer/restaurant/{{ addr['restaurant_pk'] }}" class="w-full block group relative">
                             <div class="shadow-md rounded-lg h-36 border-1 border-zinc-100 w-full overflow-hidden relative">
                                 <!-- Overlay -->
                                 <div class="absolute inset-0 bg-blue-200 bg-opacity-20 transition-opacity opacity-0 group-hover:opacity-80"></div>
                                 
                                 <article class="flex p-3 w-full h-full gap-5 relative">
                                     <div class="w-1/3 h-full overflow-hidden flex justify-center items-center rounded-lg relative">
-                                        <img src="{{ url_for('static', filename='restaurant_images/' + addr.restaurant_image_name) }}" 
+                                        <img src="{{ url_for('static', filename='restaurant_images/' + addr['restaurant_image_name']) }}" 
                                                 alt="{{ addr.restaurant_name }}"
                                                 class="h-full w-full object-cover" />
                                     </div>
                                     <div>
-                                        <p class="text-xl font-semibold pb-2">{{ addr.restaurant_name }}</p>
-                                        <p class="text-gray-500 text-sm font-light">{{ addr.restaurant_street }}, {{ addr.restaurant_postalcode }} {{ addr.restaurant_city }}</p>
+                                        <p class="text-xl font-semibold pb-2">{{ addr['restaurant_name'] }}</p>
+                                        <p class="text-gray-500 text-sm font-light">{{ addr['restaurant_street'] }}, {{ addr['restaurant_postalcode'] }} {{ addr['restaurant_city'] }}</p>
                                     </div>
                                 </article>
                             </div>
