--- a/templates/view_edit_profile.html
+++ b/templates/view_edit_profile.html
@@ -72,7 +72,7 @@
             class="bg-blue-500 text-white font-medium py-2 px-4 rounded-md hover:bg-blue-600 transition duration-200">
             Save
         </button>
-        <button class="open-delete-modal-btn text-red-500 font-semibold border-b-2 border-transparent leading-none w-fit mx-auto hover:border-red-500 transition-colors duration-200 ease-in-out">
+        <button type="button" class="open-delete-modal-btn text-red-500 font-semibold border-b-2 border-transparent leading-none w-fit mx-auto hover:border-red-500 transition-colors duration-200 ease-in-out">
             Delete account
         </button>
     </form>
