--- a/templates/view_edit_restaurant_profile.html
+++ b/templates/view_edit_restaurant_profile.html
@@ -68,7 +68,7 @@
             class="btn-primary rounded-md">
             Save
         </button>
-        <button class="open-delete-modal-btn text-red-500 font-semibold border-b-2 border-transparent leading-none w-fit mx-auto hover:border-red-500 transition-colors duration-200 ease-in-out">
+        <button type="button" class="open-delete-modal-btn text-red-500 font-semibold border-b-2 border-transparent leading-none w-fit mx-auto hover:border-red-500 transition-colors duration-200 ease-in-out">
             Delete account
         </button>
     </form>
