--- a/templates/__frm_signup.html
+++ b/templates/__frm_signup.html
@@ -73,7 +73,7 @@
       </label>
       <input
           name="user_password"
-          type="text"
+          type="password"
           mix-check="{{ x.PASSWORD_REGEX }}" />
   </div>
 
