--- a/templates/view_forgot_password.html
+++ b/templates/view_forgot_password.html
@@ -15,7 +15,7 @@
                 type="text" 
                 mix-check="{{ x.EMAIL_REGEX }}" />
         </div>
-        <button class="btn-primary rounded-md" mix-post="/forgot-password" mix-data="#frm_forgot_password">Reset password</button>
+        <button class="btn-primary rounded-md" mix-post="/forgot-password" mix-data="#frm_forgot_password">Send</button>
     </form>
 </main>
 
