--- a/templates/view_reset_password.html
+++ b/templates/view_reset_password.html
@@ -7,13 +7,13 @@
             <label for="new_password" class="d-flex">
                 <span>New password</span>
             </label>
-            <input id="new_password" name="new_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}" />
+            <input id="new_password" name="new_password" type="password" mix-check="{{ x.PASSWORD_REGEX }}" />
         </div>
         <div class="d-flex flex-col">
             <label for="confirm_password" class="d-flex">
                 <span>Confirm password</span>
             </label>
-            <input id="confirm_password" name="confirm_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}" />
+            <input id="confirm_password" name="confirm_password" type="password" mix-check="{{ x.PASSWORD_REGEX }}" />
         </div>
 
         <button mix-post="/reset-password/{{ reset_password_key }}" mix-data="#frm_reset_password">
