--- a/templates/view_signup_restaurant.html
+++ b/templates/view_signup_restaurant.html
@@ -64,7 +64,7 @@
                 </label>
                 <input
                     name="restaurant_password"
-                    type="text"
+                    type="password"
                     mix-check="{{ x.PASSWORD_REGEX }}"/>
             </div>
     
