--- a/templates/__frm_login.html
+++ b/templates/__frm_login.html
@@ -21,7 +21,7 @@
       </label>
       <input
           name="user_password"
-          type="text"
+          type="password"
           mix-check="{{ x.PASSWORD_REGEX }}"/>
   </div>
 
