--- a/templates/__frm_login.html
+++ b/templates/__frm_login.html
@@ -2,7 +2,7 @@
   <div>
       <div class="text-green-500">{{ message }}</div>
       <h1 class="text-3xl font-bold pb-3">Log in</h1>
-      <p class=" font-light text-gray-700">Log in below or create a new Wolt account.</p>
+      <p class=" font-light text-gray-700">Log in below or create a new Wait account.</p>
   </div>
   <div class="flex flex-col">
       <label for="user_email" class="text-sm text-gray-600 mb-1">
