--- a/templates/_bottom.html
+++ b/templates/_bottom.html
@@ -7,10 +7,10 @@
 <footer class="bg-zinc-950 text-white px-20 pt-24 pb-8 mt-20">
 <div class="grid grid-cols-6 pb-10">
   <div>
-    <p class="text-4xl font-bold">Wolt</p>
+    <p class="text-4xl font-bold">Wait</p>
   </div>
   <div>
-    <p class=" text-zinc-400 font-semibold pb-4">Partner with Wolt</p>
+    <p class=" text-zinc-400 font-semibold pb-4">Partner with Wait</p>
     <p class="pb-2 cursor-pointer font-light">For couries</p>
     <p class="pb-2 cursor-pointer font-light">For merchants</p>
     <p class="cursor-pointer font-light">For affiliates</p>
@@ -26,11 +26,11 @@
   </div>
   <div>
     <p class=" text-zinc-400 font-semibold pb-4">Products</p>
-    <p class="pb-2 cursor-pointer font-light">Wolt Drive</p>
-    <p class="pb-2 cursor-pointer font-light">Wolt Market</p>
-    <p class="pb-2 cursor-pointer font-light">Wolt+</p>
-    <p class="pb-2 cursor-pointer font-light">Wolt for Work</p>
-    <p class="cursor-pointer font-light">Wolt Ads</p>
+    <p class="pb-2 cursor-pointer font-light">Wait Drive</p>
+    <p class="pb-2 cursor-pointer font-light">Wait Market</p>
+    <p class="pb-2 cursor-pointer font-light">Wait+</p>
+    <p class="pb-2 cursor-pointer font-light">Wait for Work</p>
+    <p class="cursor-pointer font-light">Wait Ads</p>
   </div>
   <div>
     <p class=" text-zinc-400 font-semibold pb-4">Useful links</p>
@@ -49,7 +49,7 @@
     <p class="pb-2 cursor-pointer font-light">Facebook</p>
     <p class="pb-2 cursor-pointer font-light">X</p>
     <p class="pb-2 cursor-pointer font-light">LinkedIn</p>
-    <p class="cursor-pointer font-light">Wolt life</p>
+    <p class="cursor-pointer font-light">Wait life</p>
   </div>
 </div>
 <div class="flex justify-between">
@@ -71,7 +71,7 @@
     <p class="cursor-pointer text-sm font-light">Accessibility Statements</p>
     <p class="cursor-pointer text-sm font-light">User Terms of Service</p>
     <p class="cursor-pointer text-sm font-light">Privacy Statement</p>
-    <p class="text-zinc-500 cursor-pointer text-sm font-light">&copy; Wolt 2014-2024</p>
+    <p class="text-zinc-500 cursor-pointer text-sm font-light">&copy; Wait 2014-2024</p>
   </div>
 </div>
 </footer>
