--- a/templates/view_signup_restaurant.html
+++ b/templates/view_signup_restaurant.html
@@ -2,7 +2,7 @@
 
 <main class="w-full h-full px-20">
     <h1 class="text-5xl font-extrabold mb-4">Sign up</h1>
-    <h2 class="text-3xl font-semibold mb-10">Register your restaurant and become a part of the Wolt family</h2>
+    <h2 class="text-3xl font-semibold mb-10">Register your restaurant and become a part of the Wait family</h2>
     <form id="frm_restaurant_signup" class="mx-auto border-1 border-zinc-100 w-full flex max-w-4xl divide-x-2 divide-zinc-100 p-10 shadow-lg rounded-md">
         <div class="flex flex-col w-1/2 gap-6 pr-10">
             <div class="flex flex-col w-full">
