--- a/templates/__header_admin.html
+++ b/templates/__header_admin.html
@@ -1,6 +1,6 @@
 <div class="flex w-full items-center justify-between py-5 border-b border-zinc-200 mb-14">
   <div class="pl-20">
-    <a class="text-5xl font-bold font-baloo" href="/{{ user.roles[0] }}">Wolt</a>
+    <a class="text-5xl font-bold font-baloo" href="/{{ user.roles[0] }}">Wait</a>
   </div>
 
   <div class="relative dropdown-container pr-20 flex justify-end">
