--- a/templates/__header_customer.html
+++ b/templates/__header_customer.html
@@ -1,7 +1,7 @@
 <div class="mb-14">
   <div class="flex w-full py-5 justify-start border-b border-zinc-200">
     <div class="w-1/3 flex gap-3 justify-start items-center pl-20">
-      <a class="text-5xl font-bold font-baloo" href="/{{  role if role else user.roles[0] }}">Wolt</a>
+      <a class="text-5xl font-bold font-baloo" href="/{{  role if role else user.roles[0] }}">Wait</a>
       <div class="p-2 ml-3 bg-blue-100 rounded-full text-blue-700">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
@@ -12,7 +12,7 @@
     
     <div class="w-1/3 justify-items-center">
         <form id="search_frm" method="GET" action="/search" class="relative w-fit">
-            <input id="search_field" type="text" name="search_field" placeholder="Search in Wolt..." class="border-none placeholder:text-sm capitalize rounded-full bg-zinc-200 h-10 pl-10 w-72"/>
+            <input id="search_field" type="text" name="search_field" placeholder="Search in Wait..." class="border-none placeholder:text-sm capitalize rounded-full bg-zinc-200 h-10 pl-10 w-72"/>
             <button type="submit" class="absolute left-3 top-3">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
