--- a/templates/_top.html
+++ b/templates/_top.html
@@ -17,7 +17,7 @@
     <div id="toast" class="flex flex-col justify-center fixed w-full top-4 z-10"></div>
     <div class="flex w-full py-5 justify-between border-b border-zinc-200 mb-14">
         <div class="w-1/3 flex gap-3 justify-start items-center pl-20">
-            <a class="text-5xl font-bold font-baloo" href="/">Wolt</a>
+            <a class="text-5xl font-bold font-baloo" href="/">Wait</a>
             <div class="p-2 ml-3 bg-blue-100 rounded-full">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-7 stroke-blue-700">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
