--- a/templates/_top.html
+++ b/templates/_top.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" />
-    <link href="/static/output.css" rel="stylesheet">
-    <script src="/static/ui.js" type="module"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='output.css') }}">
+    <script src="{{ url_for('static', filename='ui.js')}}" type="module"></script>
     <title>
         {{ title or "Company" }}
     </title>
