--- a/templates/_top_logged.html
+++ b/templates/_top_logged.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" />
         <link rel="stylesheet" href="{{ url_for('static', filename='output.css') }}">
+        <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
         <script src="{{ url_for('static', filename='ui.js')}}" type="module"></script>
         <title>{{ title or "Company" }}</title>
     </head>
